iRedMail-0.9.8:
    * Supports new distribution release:
        + OpenBSD 6.2, 6.3
        + Ubuntu 17.10

    * Dropped distribution releases:
        + RHEL/CentOS 6
        + Ubuntu 14.04 LTS, 17.04
        + Debian 8
        + OpenBSD 6.1

    * Remove components:
        - Apache has been removed, Nginx is the only one web server available.

    * New components:
        + netdata (1.10.0) monitor integration: http://my-netdata.io
          Note: netdata currently works on Linux and FreeBSD, not OpenBSD.

          - Integrate netdata on Linux server:
            https://docs.iredmail.org/integration.netdata.linux.html

          - Integrate netdata on FreeBSD server:
            https://docs.iredmail.org/integration.netdata.freebsd.html

        + Integrate 'mlmmj' mailing list manager, and 'mlmmjadmin' RESTful API
          server for easy mlmmj management.

            - mlmmj: http://mlmmj.org/
            - mlmmjadmin (developed and maintained by iRedMail team):
              https://github.com/iredmail/mlmmjadmin
            - Integrate mlmmj & mlmmjadmin:
                - LDAP backends: https://docs.iredmail.org/integration.mlmmj.ldap.html
                - MySQL/MariaDB backends: https://docs.iredmail.org/integration.mlmmj.mysql.html
                - PostgreSQL backend: https://docs.iredmail.org/integration.mlmmj.pgsql.html

          Note: mlmmj & mlmmjadmin are now core components in iRedMail.

    * Improvements:
        - SQL backends:
            - New table: maillists.
            - New columns: domain.maillists, forwardings.is_maillist.
            - Removed column: mailbox.local_part.
              It's inherited from PostfixAdmin at the beginning, but not used
              by any applications, time to drop it.
            - Table renamed: alias_moderators -> moderators.
        - LDAP backend:
            - Allow mail list account to use 2 attributes: member, uniqueMember.