@@ -1,3 +1,8 @@
+iRedMail-0.9.9:
+    * Improvements:
+        + Switch to utf8mb4 as default character set in MySQL.
+        + Set file/directory permission to 0400 for dumpped SQL backup files.
+
 iRedMail-0.9.8:
     * Supports new distribution release:
         + OpenBSD 6.2, 6.3
